# sparring

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  config.yaml  pyproject.toml  requirements.txt
deploy/: README.md  run-prod.sh  sparring.service
src/sparring/: __init__.py  api.py  auth.py  cli.py  closure.py  coach.py  config.py  costs.py  divergence.py  domain.py  fanout.py  flow.py  gate.py  llm.py  memo.py  observe.py  quota.py  reveal.py  seed_invite.py  store.py
tests/: test_auth.py  test_costs.py  test_divergence_parse.py  test_flow.py  test_observe.py  test_parse_units.py  test_quota.py  test_store.py
tools/: diag.py  e2e_live.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css  main.tsx
web/src/views/: History.tsx  InviteGate.tsx  NewSparring.tsx  Session.tsx
