[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sparring"
version = "0.1.0"
description = "Local-first decision-sparring tool: heterogeneous multi-AI debate plus a Socratic coach for high-stakes decisions."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sse-starlette>=2.1",
]

[tool.setuptools.packages.find]
where = ["src"]
